<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayoutID01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!--Content Container///////////////////////////////////////////////////-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ToolBarActivityMainID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background_image"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title=" ">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/FrameLayoutContainerID01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Under Construction" />
        </FrameLayout>

    </LinearLayout>

    <!--Drawer Menu///////////////////////////////////////////////////-->
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background_image_left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/menu"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ImageViewBackID01"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="right"
                android:background="@drawable/selector_back_button"
                android:clickable="true" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutGradeSummaryID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/green_button_png24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/grade_summary"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSettingID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/green_button_png24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutHelpAndSupportID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/green_button_png24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/help_and_support"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutChangePasswordID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/green_button_png24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutLogoutID01"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_menu_background"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/green_button_png24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
